--- a/index.html
+++ b/index.html
@@ -229,11 +229,42 @@
           <p class="mb-0">O sucesso não é garantido, mas o fracasso é certo se você não estiver emocionalmente envolvido em seu trabalho.</p>
           <footer class="blockquote-footer">Biz Stone <cite title="Titulo">Fundador do Twiter</cite></footer>
       </blockquote>
-      <blockquote class="blockquote text-right mb-0">
-          <footer class="blockquote-footer">Master Radios Corp. ©2001 - 2021 Todos os direitos reservados.</footer>
-      </blockquote>
+
+      
+      
+      <div class="row my-5">
+
+        <div class="col-sm-3 text-center mb-5">
+          <h5 class="text-light">Acesso rápido</h5>
+          <a href="#"><h6 class="text-light">Página Inicial</h6></a>
+          <a href="./empresa.html"><h6 class="text-light">Quem Somos</h6></a>
+          <a href="./produtos.html"><h6 class="text-light">Produtos</h6></a>
+          <a href="./servicos.html"><h6 class="text-light">Serviços</h6></a>
+        </div>
+
+        <div class="col-sm-3 text-center mt-5">
+          <img src="./imgs/logo_master/master_logo_branco.png" alt="" style="width: 30%;">
+        </div>
+
+        <div class="col-sm-6 mb-5 mt-3">
+            <h6 class=" text-center"><i class="fa fa-map-marker"></i> Rua Godofredo Pereira de Moraes, 87</h6>
+            <h6 class=" text-center">Cajati - SP, CEP 11950-000</h6>
+            <h6 class=" text-center"><i class="fa fa-phone"></i> (13) 3854-1654 / (13) 997191911</h6>
+            <h6 class=" text-center"><i class="fa fa-envelope"></i> anibal@masterradios.com.br</h6>
+        </div>
+ 
+        <div class="col-12">
+          <blockquote class="blockquote text-right mb-0">
+            <footer class="blockquote-footer text-center">
+              Master Radios Corp. ©2001 - 2021 Todos os direitos reservados.
+            </footer>
+          </blockquote>
+        </div>
+      </div>
+
   
-  </div>
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
