--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
 
         <div class="col-sm-3 text-center mt-5">
           <img src="./imgs/logo_master/master_logo_branco.png" alt="" style="width: 30%;">
+          <p><a href="modulo_adm/adm.php">login adm</a></p>
         </div>
 
         <div class="col-sm-6 mb-5 mt-3">
